added image, video sharing and download option

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <pear-ctrl></pear-ctrl>
     </div>
     <div class="container">
-      <h1 style="margin-bottom: 0.5rem;">P2P Presentation Sharing</h1>
+      <h1 style="margin-bottom: 0.5rem;">Pear Deck</h1>
       <p>Room Topic: <span id="room-topic"></span></p>
       <p>Peers <span id="peers-count">0</span></p>
       <div style="margin-top: 2rem;" id="room-section" class="">
@@ -26,10 +26,10 @@
       <div id="loading" class="hidden">Loading...</div>
       <div style="margin-top: 2rem;" id="file-section" class="hidden">
         <div class="form-group">
-          <label for="file-input">Upload Presentation:</label>
+          <label for="file-input">Upload File : </label>
           <input type="file" id="file-input">
         </div>
-        <button id="share-file-btn">Share Presentation</button>
+        <button id="share-file-btn">Share File</button>
       </div>
     </div>
     <div class="ppt_view hidden">
