--- a/index.html
+++ b/index.html
@@ -32,9 +32,20 @@
         <button id="share-file-btn">Share File</button>
       </div>
     </div>
+    <div class="toggle-btn-div hidden">
+      <button id="pptBtn">ppt/pdf</button>
+      <button id="imgBtn">image</button>
+      <button id="otherBtn">other</button>
+    </div>
     <div class="ppt_view hidden">
       <h1>Presentation Viewer</h1>
       <iframe id="presentation-viewer" width="100%" height="500px"></iframe>
+    </div>
+    <div class="image_view hidden">
+      <h1>Image Viewer</h1>
+    </div>
+    <div class="other_view hidden">
+      <h1>Other Viewer</h1>
     </div>
 
   </body>
