--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div class="toggle-btn-div hidden">
       <button id="pptBtn" style="text-transform: uppercase;">ppt/pdf</button>
       <button id="imgBtn" style="text-transform: uppercase;">image</button>
+      <button id="videoBtn" style="text-transform: uppercase;">video</button>
       <button id="otherBtn" style="text-transform: uppercase;">other</button>
     </div>
     <div class="ppt_view hidden">
@@ -48,6 +49,9 @@
     </div>
     <div class="image_view hidden">
       <h1>Image Viewer</h1>
+    </div>
+    <div class="video_view hidden">
+      <h1>Video Viewer</h1>
     </div>
     <div class="other_view hidden">
       <h1>Other Viewer</h1>
