now chat with terminal peardeck

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1 style="margin-bottom: 0.5rem;">Pear Deck</h1>
       <p>Room Topic: <span id="room-topic"></span></p>
       <p>Peers <span id="peers-count">0</span></p>
-      <p>Your hexy : <span id="hexName"></span></p>
+      <!-- <p>Your hexy : <span id="hexName"></span></p> -->
       <div style="margin-top: 2rem;" id="room-section" class="">
         <div class="form-group">
           <label style="font-size: 13px;" for="room-id">Enter Room ID to Join:</label>
